<resources>
    <string name="app_name">Faci Alarm</string>
    <string name="stop_connection">Stop Connection</string>
    <string name="start_connection">Start connection</string>
    <string name="show_data"> </string>
    <string name="add_device">Add device</string>
    <string name="add_device_name">Add device name</string>
    <string name="set_device_status">Set device status:</string>
    <string name="device_status">Status</string>
    <string name="save_new_device">Save new device</string>
    <string name="delete_all_alarms">Delete all alarms</string>
    <string name="info">Info</string>
    <string name="nav_header_app_name">Faci Alarm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="alarms">Alarms</string>
    <string name="delete_all_device">Delete all device</string>
    <string name="alarm">Alarm</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="add_lan_code">Add lan code</string>
    <string name="add_port_number">Add port number</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="device_list">Device list</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="add_main_device">Add main device</string>
</resources>
